--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.97",
     "@mui/material": "^5.10.1",
     "axios": "^0.27.2",
     "next": "12.2.5",
