--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable-views": "^0.14.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
