--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-swipeable-views": "^0.14.0",
+    "sweetalert2": "^11.4.33",
     "swr": "^1.3.0"
   },
   "devDependencies": {
